# superseedr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml  pytest.ini
.github/workflows/: integration-cluster-cli.yml  integration-interop.yml  rust.yml  test.yml
agentic_plans/: cargo_dependency_assessment_2026-03-12.md  cli_control_status_testing.md  cli_shared_config_agent_validation_plan_2026-03-19.md  integration_harness_plan.md  integrity_scheduler_plan_2026-03-03.md  layered_shared_config_plan_2026-03-13.md  multi_instance_zero_config_scaling_plan_2026-03-12.md  network_activity_chart_panel_expansion_plan_2026-03-05.md  runtime_scalability_cleanup_plan_2026-03-12.md  startup_churn_cpu_reimplementation_plan_2026-03-01.md  system_health_prober_plan_2026-03-27.md  terminal_paste_fallback_plan_2026-03-10.md  torrent_restart_revalidate_refactor_plan_2026-03-20.md  tui_architecture_refactor.md  tui_particle_theme_layers_plan_2026-02-25.md
agentic_prompts/: changelog.md  maintenance_task.md  review.md
agentic_testing/: results.json  summary.md
docs/: CHANGELOG.md  ROADMAP.md  cli.md  dht-ownership-plan.md  integration-e2e-automation-plan.md  shared-config.md
integration_tests/: README.md  run_cluster_cli.sh  settings.toml
integration_tests/cluster_cli/: __init__.py  manifest.py  run.py  runner.py
integration_tests/cluster_cli/fixtures/: manifest.json
integration_tests/cluster_cli/tests/: test_cluster_cli.py  test_manifest.py
integration_tests/docker/: docker-compose.cluster-cli.yml
integration_tests/harness/: run.py
integration_tests/harness/clients/: transmission.py
integration_tests/harness/scenarios/: transmission_to_superseedr.py
integration_tests/harness/tests/: test_transmission_to_superseedr_interop.py
integration_tests/torrents/hybrid/: multi_file.torrent  nested.torrent  single_16k.bin.torrent  single_4k.bin.torrent  single_8k.bin.torrent
integration_tests/torrents/v1/: multi_file.torrent  nested.torrent  single_16k.bin.torrent  single_25k.bin.torrent  single_4k.bin.torrent  single_8k.bin.torrent
integration_tests/torrents/v2/: multi_file.torrent  nested.torrent  single_16k.bin.torrent  single_4k.bin.torrent  single_8k.bin.torrent
local_scripts/: clear_integration_output.py  generate_integration_bins.py  validate_integration_output.py
src/: app.rs  command.rs  config.rs  control_service.rs  errors.rs  fs_atomic.rs  integrity_scheduler.rs  main.rs  resource_manager.rs  storage.rs  theme.rs  token_bucket.rs  torrent_identity.rs  watch_inbox.rs
src/integrations/: cli.rs  control.rs  mod.rs  rss_ingest.rs  rss_service.rs  rss_url_safety.rs  status.rs  watcher.rs
src/networking/: protocol.rs  session.rs
src/persistence/: README.md  activity_history.rs  event_journal.rs  mod.rs  network_history.rs  rss.rs
src/telemetry/: activity_history_telemetry.rs  manager_telemetry.rs  mod.rs  network_history_telemetry.rs  restore_densify.rs  ui_telemetry.rs
src/torrent_file/: mod.rs
src/torrent_manager/: block_manager.rs  manager.rs  mod.rs  state.rs
src/tracker/: client.rs  mod.rs
src/tui/: README.md  effects.rs  events.rs  formatters.rs  layout.rs  mod.rs  particles.rs  paste_burst.rs  view.rs
src/tui/layout/: browser.rs  common.rs  normal.rs
src/tui/screens/: browser.rs  config.rs  delete_confirm.rs  help.rs  journal.rs  mod.rs  normal.rs  power.rs  rss.rs  welcome.rs
src/tuning/: mod.rs
