# SPDX-FileCopyrightText: 2025 The superseedr Contributors
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "superseedr"
version = "0.9.37"
description = "A BitTorrent Client in your Terminal."
edition = "2021"
repository = "https://github.com/Jagalite/superseedr"
license = "GPL-3.0-or-later"
authors = ["Jaga Tranvo <jagatranvo@prudential.com>"]  # <-- ADD THIS

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

[package.metadata.bundle]
name = "superseedr"
identifier = "com.github.jagalite.superseedr"
icon = ["assets/app_icon.icns"] # Optional: Uncomment and provide path if you have an icon
version = "0.9.37"
copyright = "Copyright © 2025 Jaga Tranvo. All rights reserved."
category = "public.app-category.utilities"
short_description = "A BitTorrent Client in your Terminal."
long_description = "A BitTorrent Client in your Terminal, written in Rust using Ratatui."
linux_use_terminal = true
linux_mime_types = ["application/x-bittorrent", "x-scheme-handler/magnet"]
linux_exec_args = "%U" # Use %U to handle URLs and potentially multiple files, or %f for single files


[package.metadata.wix]
eula = false
linker-args = ["-ext", "WixFirewallExtension"]
compiler-args = ["-ext", "WixFirewallExtension"]

[features]
# Default build includes both DHT and PEX
default = ["dht", "pex"]

# Individual features for conditional compilation
dht = ["dep:mainline"]
pex = []

console = ["dep:console-subscriber"]

[dev-dependencies]
tempfile = "3.24.0"
proptest = "1.4"
proptest-state-machine = "0.6"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2" 
serde = { version = "1.0.228", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11.19"
magnet-url = "3.0.0"
mainline = { version = "6.0.1", optional = true }
data-encoding = "2.10.0"
urlencoding = "2.1.3"
crossterm = "0.29.0"
ratatui = "0.29.0"
rand = "0.9.2"
directories = "6.0"
toml = "0.9.11"
hex = "0.4"
sysinfo = "0.37.2"
strum = "0.27.2"
strum_macros = "0.27.2"
figment = { version = "0.10", features = ["toml", "env"] }
notify = { version = "8.2.0", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
fs2 = "0.4.3"
rlimit = "0.10"
fuzzy-matcher = "0.3.7"
console-subscriber = { version = "0.5.0", optional = true }
throbber-widgets-tui = "0.9.0"
chrono = "0.4.43"
serde_json = "1.0.149"

[target.'cfg(windows)'.dependencies]
clipboard = "0.5.0"

